--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "RC",
     "require": {
         "php": ">=5.6.0 <8.2",
-        "codeception/lib-innerbrowser": "dev-master | ^1.0",
+        "codeception/lib-innerbrowser": "^3.1.2",
         "codeception/codeception": "^5.0"
     },
     "require-dev": {
